2008-05-20  Frank Ch. Eigler  <fche@elastic.org>

	PR 6538
	* systemtap.base/warnings.*: New tests.
	* buildok/eleven.stp, systemtap.examples/disktop.stp,
	transok/three.stp: Adapt to new warnings.

2008-05-21  Stan Cox  <scox@redhat.com>

	* systemtap.base/optim_arridx.stp: Test compound assignment and
	binary expression.
	* systemtap.base/optim_arridx.exp: Likewise.

2008-05-21  Mark Wielaard  <mwielaard@redhat.com>

	* buildok/aux_syscalls-embedded.stp: Don't check _struct_utimbuf_u
	and _struct_compat_utimbuf_u. Check new _struct_utimbuf_actime,
	_struct_utimbuf_modtime, _struct_compat_utimbuf_actime and
	_struct_compat_utimbuf_modtime.

2008-05-20  Mark Wielaard  <mwielaard@redhat.com>

	PR 5001
	* systemtap.syscall/futimes.c (utime): Expect new time format.
	* systemtap.syscall/stat.c (utime): Likewise.

2008-05-19  Mark Wielaard  <mwielaard@redhat.com>

	PR 6524
	* systemtap.base/ctime.stp: New test.
	* systemtap.base/ctime.exp: New expect file.

2008-05-19  Stan Cox  <scox@redhat.com>

	* systemtap.base/optim_arridx.stp: New test.
	* systemtap.base/optim_arridx.exp: New test.

2008-04-29  Frank Ch. Eigler  <fche@elastic.org>

	PR 6466.
	* semko/twelve.stp, semok/twenty.stp, systemtap.base/cache.exp,
	systemtap.base/maxactive.exp, systemtap.base/warnings.exp,
	transok/eight.stp: Adapt to new elision capabilities; add new
	side-effects or -w warning-suppression flags.
	* systemtap.pass1-4/buildok.exp: Remove two kfails.
	* semok/optimize.stp: Test new elision.

2008-04-24  Will Cohen  <wcohen@redhat.com>

	* systemtap.examples: examples moved into testsuite.

2008-04-22  David Smith  <dsmith@redhat.com>

	* systemtap.base/utrace_p5.exp: Simplfied a little.

	* systemtap.base/utrace_p5.exp: Added run-time utrace tests.

2008-04-21  David Smith  <dsmith@redhat.com>

	* parseko/utrace01.stp: Renamed from semko/utrace02.stp (since it
	received a parse error, not a semantic error).

2008-04-21  Martin Hunt  <hunt@redhat.com>
